refactor: ♻️ add unit tests for nest application (#437)
